Fix: Control panel scrolls when window is too small. 3D scene adjusts to window in height now too.

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -4,5 +4,6 @@ html, body {
     width: 100%;
     height: 100%;
     background-color: var(--background-l-0);
-    overflow: hidden;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
